Publish non-root Java images
Signed-off-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>

--- a/java/cloudbuild.yaml
+++ b/java/cloudbuild.yaml
@@ -128,27 +128,49 @@ steps:
 
 images:
   - 'gcr.io/$PROJECT_ID/java:latest'
+  - 'gcr.io/$PROJECT_ID/java:nonroot'
   - 'gcr.io/$PROJECT_ID/java:8'
+  - 'gcr.io/$PROJECT_ID/java:8-nonroot'
   - 'gcr.io/$PROJECT_ID/java:debug'
+  - 'gcr.io/$PROJECT_ID/java:debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java:8-debug'
+  - 'gcr.io/$PROJECT_ID/java:8-debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java:11'
+  - 'gcr.io/$PROJECT_ID/java:11-nonroot'
   - 'gcr.io/$PROJECT_ID/java:11-debug'
+  - 'gcr.io/$PROJECT_ID/java:11-debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java:base'
+  - 'gcr.io/$PROJECT_ID/java:base-nonroot'
   - 'gcr.io/$PROJECT_ID/java:base-debug'
+  - 'gcr.io/$PROJECT_ID/java:base-debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian9:base'
+  - 'gcr.io/$PROJECT_ID/java-debian9:base-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian9:base-debug'
+  - 'gcr.io/$PROJECT_ID/java-debian9:base-debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian9:latest'
+  - 'gcr.io/$PROJECT_ID/java-debian9:nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian9:8'
+  - 'gcr.io/$PROJECT_ID/java-debian9:8-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian9:debug'
+  - 'gcr.io/$PROJECT_ID/java-debian9:debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian9:8-debug'
+  - 'gcr.io/$PROJECT_ID/java-debian9:8-debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian9:11'
+  - 'gcr.io/$PROJECT_ID/java-debian9:11-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian9:11-debug'
+  - 'gcr.io/$PROJECT_ID/java-debian9:11-debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian10:base'
+  - 'gcr.io/$PROJECT_ID/java-debian10:base-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian10:base-debug'
+  - 'gcr.io/$PROJECT_ID/java-debian10:base-debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian10:latest'
+  - 'gcr.io/$PROJECT_ID/java-debian10:nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian10:11'
+  - 'gcr.io/$PROJECT_ID/java-debian10:11-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian10:debug'
+  - 'gcr.io/$PROJECT_ID/java-debian10:debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java-debian10:11-debug'
+  - 'gcr.io/$PROJECT_ID/java-debian10:11-debug-nonroot'
   - 'gcr.io/$PROJECT_ID/java/jetty:latest'
   - 'gcr.io/$PROJECT_ID/java/jetty:java8'
   - 'gcr.io/$PROJECT_ID/java/jetty:debug'
