--- a/java/testdata/java8.yaml
+++ b/java/testdata/java8.yaml
@@ -3,11 +3,11 @@ commandTests:
   - name: java
     command: "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java"
     args: ["-version"]
-    expectedError: ['openjdk version "1\.8.*"']
+    expectedError: ['openjdk version "1\.8\.0_272"']
   - name: java-symlink
     command: "/usr/bin/java"
     args: ["-version"]
-    expectedError: ['openjdk version "1\.8.*"']
+    expectedError: ['openjdk version "1\.8\.0_272"']
 fileExistenceTests:
   - name: certs
     path: "/etc/ssl/certs/java/cacerts"
