Make Java/Jetty multi-arch (amd64, arm64).
Related to this issue: https://github.com/GoogleContainerTools/distroless/issues/606.

Performs a partial (amd64 and arm64 only) migration of Java & Jetty
images to multi-arch.

--- a/java/BUILD
+++ b/java/BUILD
@@ -1,18 +1,12 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
+load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES", "DISTRO_VERSIONS")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("@io_bazel_rules_docker//java:image.bzl", "java_image")
-load("@package_bundle_amd64_debian9//file:packages.bzl", versions_amd64_debian9 = "versions")
-load("@package_bundle_amd64_debian10//file:packages.bzl", versions_amd64_debian10 = "versions")
 load("//cacerts:java.bzl", "cacerts_java")
 load("//java:jre_ver.bzl", "jre_ver")
-
-DISTRO_VERSIONS = {
-    "_debian9": versions_amd64_debian9,
-    "_debian10": versions_amd64_debian10,
-}
+load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 
 USERS = [
     "root",
@@ -21,26 +15,28 @@ USERS = [
 
 [
     container_image(
-        name = "java_base" + mode + "_" + user + distro_suffix,
-        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_amd64" + distro_suffix,
+        name = "java_base" + mode + "_" + user + "_" + arch + distro_suffix,
+        architecture = arch,
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_" + arch + distro_suffix,
         debs = [
-            DISTRO_PACKAGES["amd64"][distro_suffix]["zlib1g"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["libjpeg62-turbo"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["libpng16-16"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["liblcms2-2"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["libfreetype6"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["fonts-dejavu-core"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["fontconfig-config"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["libexpat1"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["libfontconfig1"],
-            DISTRO_PACKAGES["amd64"][distro_suffix]["libuuid1"],
+            DISTRO_PACKAGES[arch][distro_suffix]["zlib1g"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libjpeg62-turbo"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libpng16-16"],
+            DISTRO_PACKAGES[arch][distro_suffix]["liblcms2-2"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libfreetype6"],
+            DISTRO_PACKAGES[arch][distro_suffix]["fonts-dejavu-core"],
+            DISTRO_PACKAGES[arch][distro_suffix]["fontconfig-config"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libexpat1"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libfontconfig1"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libuuid1"],
         ],
         env = {"LANG": "C.UTF-8"},
         tars = [
-            "//cacerts:cacerts_java_amd64" + distro_suffix,
-            "//locale:locale_amd64" + distro_suffix,
+            "//cacerts:cacerts_java_" + arch + distro_suffix,
+            "//locale:locale_" + arch + distro_suffix,
         ],
     )
+    for arch in ARCHITECTURES
     for mode in [
         "",
         "_debug",
@@ -51,24 +47,30 @@ USERS = [
 
 [
     container_image(
-        name = rule_name + "_" + user + distro_suffix,
-        base = ":java_base" + ("_debug" if ("debug" in rule_name) else "") + "_" + user + distro_suffix,
-        debs = [DISTRO_PACKAGES["amd64"][distro_suffix][deb] for deb in java_debs],
+        name = rule_name + "_" + user + "_" + arch + distro_suffix,
+        architecture = arch,
+        base = ":java_base" + ("_debug" if ("debug" in rule_name) else "") + "_" + user + "_" + arch + distro_suffix,
+        debs = [DISTRO_PACKAGES[arch][distro_suffix][deb] for deb in java_debs],
         # We expect users to use:
         # cmd = ["/path/to/deploy.jar", "--option1", ...]
         entrypoint = [
             "/usr/bin/java",
             "-jar",
         ],
-        env = {"JAVA_VERSION": jre_ver(DISTRO_VERSIONS[distro_suffix][java_debs[0]])},
-        symlinks = {"/usr/bin/java": java_executable_path},
+        env = {"JAVA_VERSION": jre_ver(DISTRO_VERSIONS[arch][distro_suffix][java_debs[0]])},
+        symlinks = {
+            "/usr/bin/java": java_path + java_executable_path,
+            "/usr/lib/jvm/openjdk": java_path,
+        },
     )
-    for (distro_suffix, rule_name, java_debs, java_executable_path) in [
+    for arch in ARCHITECTURES
+    for (distro_suffix, rule_name, java_debs, java_path, java_executable_path) in [
         (
             "_debian9",
             "java8",
             ["openjdk-8-jre-headless"],
-            "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
+            "/usr/lib/jvm/java-8-openjdk-" + arch,
+            "/jre/bin/java",
         ),
         (
             "_debian9",
@@ -77,13 +79,15 @@ USERS = [
                 "openjdk-8-jre-headless",
                 "openjdk-8-jdk-headless",
             ],
-            "/usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java",
+            "/usr/lib/jvm/java-8-openjdk-" + arch,
+            "/jre/bin/java",
         ),
         (
             "_debian9",
             "java11",
             ["openjdk-11-jre-headless"],
-            "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
+            "/usr/lib/jvm/java-11-openjdk-" + arch,
+            "/bin/java",
         ),
         (
             "_debian9",
@@ -92,13 +96,15 @@ USERS = [
                 "openjdk-11-jre-headless",
                 "openjdk-11-jdk-headless",
             ],
-            "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
+            "/usr/lib/jvm/java-11-openjdk-" + arch,
+            "/bin/java",
         ),
         (
             "_debian10",
             "java11",
             ["openjdk-11-jre-headless"],
-            "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
+            "/usr/lib/jvm/java-11-openjdk-" + arch,
+            "/bin/java",
         ),
         (
             "_debian10",
@@ -107,7 +113,8 @@ USERS = [
                 "openjdk-11-jre-headless",
                 "openjdk-11-jdk-headless",
             ],
-            "/usr/lib/jvm/java-11-openjdk-amd64/bin/java",
+            "/usr/lib/jvm/java-11-openjdk-" + arch,
+            "/bin/java",
         ),
     ]
     for user in USERS
@@ -115,14 +122,15 @@ USERS = [
 
 [
     container_test(
-        name = "java_base" + mode + "_" + user + distro_suffix + "_test",
+        name = "java_base" + mode + "_" + user + "_" + arch + distro_suffix + "_test",
         configs = ["testdata/java_base" + mode + ".yaml"],
-        image = ":java_base" + mode + "_" + user + distro_suffix,
+        image = ":java_base" + mode + "_" + user + "_" + arch + distro_suffix,
         tags = [
-            "amd64",
+            arch,
             "manual",
         ],
     )
+    for arch in ARCHITECTURES
     for mode in [
         "",
         "_debug",
@@ -133,66 +141,74 @@ USERS = [
 
 [
     container_test(
-        name = "java8_debian9_" + user + "_test",
+        name = "java8_debian9_" + user + "_" + arch + "_test",
         configs = ["testdata/java8.yaml"],
-        image = ":java8_" + user + "_debian9",
+        image = ":java8_" + user + "_" + arch + "_debian9",
         tags = [
-            "amd64",
+            arch,
             "manual",
         ],
     )
+    for arch in ARCHITECTURES
     for user in USERS
 ]
 
 [
     container_test(
-        name = "java8_debug_" + user + "_debian9_test",
+        name = "java8_debug_" + user + "_" + arch + "_debian9_test",
         configs = ["testdata/java8_debug.yaml"],
-        image = ":java8_debug_" + user + "_debian9",
+        image = ":java8_debug_" + user + "_" + arch + "_debian9",
         tags = [
-            "amd64",
+            arch,
             "manual",
         ],
     )
+    for arch in ARCHITECTURES
     for user in USERS
 ]
 
 [
     container_test(
-        name = "java11_" + user + distro_suffix + "_test",
+        name = "java11_" + user + "_" + arch + distro_suffix + "_test",
         configs = ["testdata/java11" + distro_suffix + ".yaml"],
-        image = ":java11_" + user + distro_suffix,
+        image = ":java11_" + user + "_" + arch + distro_suffix,
         tags = [
-            "amd64",
+            arch,
             "manual",
         ],
     )
+    for arch in ARCHITECTURES
     for user in USERS
     for distro_suffix in DISTRO_SUFFIXES
 ]
 
 [
     container_test(
-        name = "java11_debug_" + user + distro_suffix + "_test",
+        name = "java11_debug_" + user + "_" + arch + distro_suffix + "_test",
         configs = ["testdata/java11_debug" + distro_suffix + ".yaml"],
-        image = ":java11_debug_" + user + distro_suffix,
+        image = ":java11_debug_" + user + "_" + arch + distro_suffix,
         tags = [
-            "amd64",
+            arch,
             "manual",
         ],
     )
+    for arch in ARCHITECTURES
     for user in USERS
     for distro_suffix in DISTRO_SUFFIXES
 ]
 
-RULE_NAMES = [
-    "java8_root_debian9",
-    "java8_nonroot_debian9",
-    "java11_root_debian9",
-    "java11_nonroot_debian9",
-    "java11_root_debian10",
-    "java11_nonroot_debian10",
-]
+RULE_NAMES = {
+    "java8_" + user + "_" + arch + "_debian9": arch
+    for arch in ARCHITECTURES
+    for user in USERS
+}
+
+RULE_NAMES.update({
+    "java11_" + user + "_" + arch + distro: arch
+    for arch in ARCHITECTURES
+    for user in USERS
+    for distro in DISTRO_SUFFIXES
+})
 
 [
     java_image(
@@ -207,10 +223,10 @@ RULE_NAMES = [
 [
     container_test(
         name = "check_certs_" + rule_name + "_test",
-        configs = ["testdata/" + rule_name + "_certs.yaml"],
+        configs = ["testdata/java_certs.yaml"],
         image = ":check_certs_" + rule_name,
         tags = [
-            "amd64",
+            RULE_NAMES[rule_name],
             "manual",
         ],
     )
@@ -230,10 +246,10 @@ RULE_NAMES = [
 [
     container_test(
         name = "check_encoding_" + rule_name + "_test",
-        configs = ["testdata/" + rule_name + "_encoding.yaml"],
+        configs = ["testdata/java_encoding.yaml"],
         image = ":check_encoding_" + rule_name,
         tags = [
-            "amd64",
+            RULE_NAMES[rule_name],
             "manual",
         ],
     )
