Remove dotnet, build and test everything in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,4 +24,5 @@ jobs:
     - name: Build and test
       run: |
         bazel build --curses=no //package_manager:dpkg_parser.par
-        bazel build --curses=no //base/...
+        bazel build --curses=no //...
+        bazel test --curses=no //...
