re-enable all manual tests, ignoring java8 and experimental

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,4 +25,7 @@ jobs:
       run: |
         bazel build --curses=no //package_manager:dpkg_parser.par
         bazel build --curses=no //...
-        bazel test --curses=no //...
+        bazel test --curses=no --test_output=errors //...
+        targets=$(bazel query 'attr("tags", "'amd64'", "//...")' | grep -v java8 | grep -v experimental)
+        bazel build --curses=no ${targets}
+        bazel test --curses=no --test_output=errors ${targets}
