Preliminary debian11 (bullseye) support
Adds images for:

static-debian11:latest-amd64
static-debian11:nonroot-amd64
static-debian11:debug-amd64
static-debian11:debug-nonroot-amd64
static-debian11:latest-arm64
static-debian11:nonroot-arm64
static-debian11:debug-arm64
static-debian11:debug-nonroot-arm64
static-debian11:latest-arm
static-debian11:nonroot-arm
static-debian11:debug-arm
static-debian11:debug-nonroot-arm
static-debian11:latest-s390x
static-debian11:nonroot-s390x
static-debian11:debug-s390x
static-debian11:debug-nonroot-s390x
static-debian11:latest-ppc64le
static-debian11:nonroot-ppc64le
static-debian11:debug-ppc64le
static-debian11:debug-nonroot-ppc64le
base-debian11:latest-amd64
base-debian11:nonroot-amd64
base-debian11:debug-amd64
base-debian11:debug-nonroot-amd64
base-debian11:latest-arm64
base-debian11:nonroot-arm64
base-debian11:debug-arm64
base-debian11:debug-nonroot-arm64
base-debian11:latest-arm
base-debian11:nonroot-arm
base-debian11:debug-arm
base-debian11:debug-nonroot-arm
base-debian11:latest-s390x
base-debian11:nonroot-s390x
base-debian11:debug-s390x
base-debian11:debug-nonroot-s390x
base-debian11:latest-ppc64le
base-debian11:nonroot-ppc64le
base-debian11:debug-ppc64le
base-debian11:debug-nonroot-ppc64le

Signed-off-by: Appu Goundan <appu@google.com>

--- a/base/testdata/debian11.yaml
+++ b/base/testdata/debian11.yaml
@@ -2,4 +2,4 @@ schemaVersion: "1.0.0"
 fileContentTests:
 - name: 'os-release contents'
   path: '/etc/os-release'
-  expectedContents: ['.*\nVERSION="Debian GNU/Linux 9 \(stretch\)"\n']
+  expectedContents: ['.*\nVERSION="Debian GNU/Linux 11 \(bullseye\)"\n']
