--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,6 +32,12 @@ steps:
     bazel build --jobs=1 @package_bundle_s390x_debian10//file:packages.bzl
     bazel build --jobs=1 @package_bundle_ppc64le_debian10//file:packages.bzl
 
+    bazel build --jobs=1 @package_bundle_amd64_debian11//file:packages.bzl
+    bazel build --jobs=1 @package_bundle_arm_debian11//file:packages.bzl
+    bazel build --jobs=1 @package_bundle_arm64_debian11//file:packages.bzl
+    bazel build --jobs=1 @package_bundle_s390x_debian11//file:packages.bzl
+    bazel build --jobs=1 @package_bundle_ppc64le_debian11//file:packages.bzl
+
     bazel run //:publish
 
 - name: docker
