examples/cc: Add C++ example program
While this example is nearly identical to the existing C program,
this serves as a test to make sure the //cc image contains the
right shared libraries for C++ programs. The exact libraries are
changing with the Debian 11 release, so this helped verify that
change.

--- a/examples/cc/testdata/hello.yaml
+++ b/examples/cc/testdata/hello.yaml
@@ -2,4 +2,4 @@ schemaVersion: "1.0.0"
 commandTests:
   - name: hello
     command: ['/app/examples/cc/hello']
-    expectedOutput: ['Hello from distroless!']
+    expectedOutput: ['Hello from distroless C!']
