--- a/experimental/python3/BUILD
+++ b/experimental/python3/BUILD
@@ -6,22 +6,41 @@ load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 load("//base:base.bzl", "NONROOT")
 
+# TODO: Use DISTRO_SUFFIXES when debian11 is enabled for all
+PY_DISTRO_SUFFIXES = DISTRO_SUFFIXES + ["_debian11"]
+
 # distribution-specific deb dependencies
 DISTRO_DEBS = {
     "_debian10": [
         "libffi6",
-        "libncursesw6",
+        "libmpdec2",
         "libpython3.7-minimal",
         "libpython3.7-stdlib",
-        "libtinfo6",
-        "libuuid1",
-        "python3-distutils",
+        "libreadline7",
         "python3.7-minimal",
+    ],
+    "_debian11": [
+        "libcom-err2",
+        "libcrypt1",
+        "libffi7",
+        "libgssapi-krb5-2",
+        "libk5crypto3",
+        "libkeyutils1",
+        "libkrb5-3",
+        "libkrb5support0",
+        "libmpdec3",
+        "libnsl2",
+        "libpython3.9-minimal",
+        "libpython3.9-stdlib",
+        "libreadline8",
+        "libtirpc3",
+        "python3.9-minimal",
     ],
 }
 
 DISTRO_VERSION = {
     "_debian10": "3.7",
+    "_debian11": "3.9",
 }
 
 [
@@ -33,14 +52,15 @@ DISTRO_VERSION = {
         debs = [
             DISTRO_PACKAGES[arch][distro_suffix]["dash"],
             DISTRO_PACKAGES[arch][distro_suffix]["libbz2-1.0"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libc-bin"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libc-bin"],  # for ctypes.find_library
             DISTRO_PACKAGES[arch][distro_suffix]["libdb5.3"],
             DISTRO_PACKAGES[arch][distro_suffix]["libexpat1"],
             DISTRO_PACKAGES[arch][distro_suffix]["liblzma5"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libmpdec2"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libreadline7"],
             DISTRO_PACKAGES[arch][distro_suffix]["libsqlite3-0"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libssl1.1"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libuuid1"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libncursesw6"],
+            DISTRO_PACKAGES[arch][distro_suffix]["libtinfo6"],
+            DISTRO_PACKAGES[arch][distro_suffix]["python3-distutils"],
             DISTRO_PACKAGES[arch][distro_suffix]["zlib1g"],
         ] + [DISTRO_PACKAGES[arch][distro_suffix][deb] for deb in DISTRO_DEBS[distro_suffix]],
         entrypoint = [
@@ -61,7 +81,7 @@ DISTRO_VERSION = {
         ":debug",
     ]
     for arch in ARCHITECTURES
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro_suffix in PY_DISTRO_SUFFIXES
 ]
 
 [
@@ -78,7 +98,7 @@ DISTRO_VERSION = {
         ":debug",
     ]
     for arch in ARCHITECTURES
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro_suffix in PY_DISTRO_SUFFIXES
 ]
 
 [
@@ -156,16 +176,16 @@ DISTRO_VERSION = {
         "root",
         "nonroot",
     ]
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro_suffix in PY_DISTRO_SUFFIXES
 ]
 
 # tests for version-specific things
 [
     container_test(
-        name = "debian10_" + user + "_" + arch + "_test",
+        name = "version_specific_" + user + "_" + arch + distro_suffix + "_test",
         size = "medium",
-        configs = ["testdata/debian10.yaml"],
-        image = ":python3_" + user + "_" + arch + "_debian10",
+        configs = ["testdata/" + distro_suffix[1:] + ".yaml"],
+        image = ":python3_" + user + "_" + arch + distro_suffix,
         tags = [
             "manual",
             arch,
@@ -176,4 +196,5 @@ DISTRO_VERSION = {
         "root",
         "nonroot",
     ]
+    for distro_suffix in PY_DISTRO_SUFFIXES
 ]
