--- a/.github/workflows/update-deb-package-snapshots.yml
+++ b/.github/workflows/update-deb-package-snapshots.yml
@@ -1,8 +1,8 @@
 name: update-snapshots
 on:
-  # will send emails to last editor of file
+  # will send emails to last editor of this cron syntax
   schedule:
-    - cron:  '30 8 * * *'
+    - cron:  '35 8 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
