--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,6 +9,7 @@ steps:
   env:
   - PROJECT_ID=${PROJECT_ID}
   - COMMIT_SHA=${COMMIT_SHA}
+  - REGISTRY=gcr.io
   entrypoint: sh
   args:
   - -c
@@ -45,6 +46,7 @@ steps:
   env:
   - PROJECT_ID=${PROJECT_ID}
   - COMMIT_SHA=${COMMIT_SHA}
+  - REGISTRY=gcr.io
   entrypoint: ./cloudbuild_docker.sh
 
 - name: ubuntu
@@ -54,6 +56,7 @@ steps:
   env:
   - PROJECT_ID=${PROJECT_ID}
   - COMMIT_SHA=${COMMIT_SHA}
+  - REGISTRY=gcr.io
   entrypoint: sh
   args:
   - ./cloudbuild_cosign.sh 
