Refactor the cosign script.
This refactors the cosign script for distroless, so that the arguments are passed through from `cloudbuild.yaml`, and shifts where `-key ...` is passed to be in `cloudbuild.yaml`.

This is preparation to start *also* signing the distroless images with a "keyless" flow, once https://github.com/sigstore/cosign/pull/652 lands and cosign 1.2 cuts.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -57,6 +57,8 @@ steps:
   - PROJECT_ID=${PROJECT_ID}
   - COMMIT_SHA=${COMMIT_SHA}
   - REGISTRY=gcr.io
+  - KMS_VAL=gcpkms://projects/${PROJECT_ID}/locations/global/keyRings/cosign/cryptoKeys/cosign
   entrypoint: sh
   args:
-  - ./cloudbuild_cosign.sh 
+  - -c
+  - ./cloudbuild_cosign.sh -key $KMS_VAL
