Rename step in provenance task
We don't use crane anymore!

--- a/provenance/distroless-provenance-task.yaml
+++ b/provenance/distroless-provenance-task.yaml
@@ -16,7 +16,7 @@ spec:
   - name: source
     mountPath: /go/src/github.com/GoogleContainerTools/distroless
   steps:
-    - name: crane
+    - name: provenance
       image: golang:1.16
       workingDir: $(workspaces.source.path)
       env:
